--- a/designSite/account/templates/signin.html
+++ b/designSite/account/templates/signin.html
@@ -16,51 +16,52 @@
 <body>
   <!-- signin div -->
   <div class="signin">
-    <div class="border-div"></div>
-    {% if user.is_authenticated %}
-    <div class="content">
-      <div class="ui center aligned container">
-        <p>You've login</p>
-      </div>
-    </div>
-    {% else %}
-    <div class="content">
-      <div class="ui center aligned container">
-        <div class="ui center aligned">
-          <a href="/"><img class="logo" src="/static/img/logo.png"></a>
-          <label class="ui center aligned">Sign In</label>
+    <div class="border-div">
+      {% if user.is_authenticated %}
+      <div class="content">
+        <div class="ui center aligned container">
+          <p>You've login</p>
         </div>
-
-        <form class="ui form" id="login-form" method="POST" action="/signin/">
-          {% if request.GET.next %}
-          <input type="text" name="next" value="{{ request.GET.next }}" hidden>
-          {% endif %} {% csrf_token %}
-          <div class="field">
-            <input type="text" id="username" name="username" placeholder="Username">
-          </div>
-          <div class="field">
-            <input type="password" id="password" name="password" placeholder="Password">
-          </div>
-          <div class="ui {% if messages %}visible {% endif %}error message">
-            {% if messages %}
-            <ul class="list">
-              {% for message in messages %}
-              <li>{{ message }}</li>
-              {% endfor %}
-            </ul>
-            {% endif %}
-          </div>
-        </form>
-
-        <!-- Button panel -->
-        <div id="action-panel">
-          <a class="back" href="/signup">No Account?</a>
-          <a id="signin-button" class="next">Next</a>
-        </div>
-
       </div>
+      {% else %}
+      <div class="content">
+        <div class="ui center aligned container">
+          <div class="ui center aligned">
+            <a href="/"><img class="logo" src="/static/img/logo.png"></a>
+            <label class="ui center aligned">Sign In</label>
+          </div>
+
+          <form class="ui form" id="login-form" method="POST" action="/signin/">
+            {% if request.GET.next %}
+            <input type="text" name="next" value="{{ request.GET.next }}" hidden>
+            {% endif %} {% csrf_token %}
+            <div class="field">
+              <input type="text" id="username" name="username" placeholder="Username">
+            </div>
+            <div class="field">
+              <input type="password" id="password" name="password" placeholder="Password">
+            </div>
+            <div class="ui {% if messages %}visible {% endif %}error message">
+              {% if messages %}
+              <ul class="list">
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+              </ul>
+              {% endif %}
+            </div>
+          </form>
+
+          <!-- Button panel -->
+          <div id="action-panel">
+            <a class="back" href="/signup">No Account?</a>
+            <a id="signin-button" class="next">Next</a>
+          </div>
+
+        </div>
+      </div>
+      {% endif %}
     </div>
-    {% endif %}
   </div>
 </body>
 
