--- a/designSite/search/templates/search.html
+++ b/designSite/search/templates/search.html
@@ -32,36 +32,11 @@
           </div>
       </div>
   </div>
-    
-
-  <!-- Search top bar -->
-  <!-- <div class="ui container top-bar">
-    <div class="left aligned">
-      <img id="logo" class="button" src="/static/img/logo_gray.png">
-    </div>
-    <div class="ui icon input">
-      <input name="keyword" placeholder="Search..." type="text">
-      <i class="search icon" id="search"></i>
-    </div>
-    <div class="right aligned">
-      <label id="design" class="button">DESIGN</label>
-      <label id="account" class="button">ACCOUNT</label>
-    </div>
-  </div> -->
-
-
-  <!-- Search Content segment -->
-  <!-- <div id="content-segment" class="ui vertical stripe segment visible"></div> -->
-
-  <!-- Item Detail segment -->
-  <!-- <div id="item-segment" class="ui vertical stripe segment invisible">
-    <div class="ui container"></div>
-  </div> -->
 
   <div class="ui middle aligned grid" id="center-wrapper">
       <div class="column">
           <div class="ui center aligned page grid">
-            <div id="search-title">
+            <div id="search-title-1">
               CO-RAD Search
             </div>
             <div class="sixteen wide column">
