update design ui

--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -14,7 +14,7 @@
   <div class="ui inverted vertical masthead center aligned segment">
     <div class="ui container">
       <div class="ui large secondary inverted menu">
-        <a class="item">
+        <a class="item" href="/">
           <img class="logo" src="/static/img/logo.png">
         </a>
         <div class="right item">
