--- a/designSite/static/css/design.css
+++ b/designSite/static/css/design.css
@@ -476,7 +476,7 @@ div h5,
 
 .SDinDesign-device.jtk-draggable.ui-droppable,
 .pusher {
-  background-color: #f8e7e9 !important;
+  background-color: #f8e7e9;
 }
 
 .SDinDesign-part p {
