[fix] fix the gray box on the left side. in html, two divs are hack to access python variable in js. the method is, add two div and {{ val }} as their html text. then use jquery to access that text to get the val. however, the divs break some css. so in the commit, I move the div out of html-body.

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -1,8 +1,6 @@
 {% load static %}
 
 <html>
-  <div hidden id="username-hack">{{username}}</div>
-  <div hidden id="authorname-hack">{{authorname}}</div>
 
 <head>
   <title>Designer</title>
@@ -769,6 +767,9 @@
     </div>
 
 </body>
+<div id="username-hack">{{username}}</div>
+<div id="authorname-hack">{{authorname}}</div>
+
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/jquery-ui/jquery-ui.min.js"></script>
 <script src="/static/js/jquery.mousewheel.min.js"></script>
