let info box unselectable let info box transparant

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -179,7 +179,7 @@
   <div id="canvas-box" design-id="{{ designID }}">
     <canvas class="live-canvas hidden" id="live-canvas" width="100%" height="100%"></canvas>
     <div id="canvas">
-      <div class="ui message info-box" id="info-box">
+      <div class="ui message info-box unselectable" id="info-box">
         <div class="header">
           Basic Information
         </div>
