--- a/designSite/static/css/canvas.css
+++ b/designSite/static/css/canvas.css
@@ -15,6 +15,12 @@
   transition: box-shadow 0.2s ease;
   text-align: center;
   cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 div.SDinDesign-subpartDropper {
